--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <p></p>
 
 
-        <p class="view"><a href="https://github.com/PerfectTightwad">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/PerfectTightwad">View My GitHub Profile</a></p><br />
+        <p><a href="https://github.com/PerfectTightwad">MyGithub</a></p>
 
       </header>
       <section>
